--- a/game.html
+++ b/game.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Webtechnologien - Breakout - Game </title>
-    </head>
-    <body>
-        <p> Hier wird später das Spiel zu sehen sein. </p>
+<head>
+	<title>WT1-Spiel</title>
+	<meta charset="UTF-8">
+	<link href='https://fonts.googleapis.com/css?family=Over the Rainbow' rel='stylesheet'>
+</head>
+<body>
 
-        <a href="index.html"> Home </a>
-    </body>
+	<div id="highscore-form">
+		<form method="POST" action="">
+			<input id="username" type="text" name="username" placeholder="Username..."><br />hat<br /><br />
+			<input id="points" type="number" name="points" value="0" readonly="readonly"><br />
+			Punkt(e) erreicht! <br />
+			<button type="submit">Speichern</button>
+		</form>
+	</div>
+
+	<canvas height="600" width="800" style="background-color: #717171;"></canvas>
+
+</body>
 </html>
