--- a/game.html
+++ b/game.html
@@ -3,7 +3,9 @@
 <head>
 	<title>WT1-Spiel</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Over the Rainbow' rel='stylesheet'>
+	<link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 </head>
 <body>
 
