--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WT1-Spiel</title>
+	<title>WT1-Spiel - Breakout - René R. 2023</title>
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<meta charset="UTF-8">
 	<link href='https://fonts.googleapis.com/css?family=Over the Rainbow' rel='stylesheet'>
+	<link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="header" class="header">
@@ -43,7 +45,7 @@
 		<div id="game" class="section">
 			<h3>Das Spiel</h3>
 
-			<p>Hier könnte eine lange Erklärung stehen oder Sie fangen einfach direkt an, zu spielen!</p>
+			<p>Ich mein das ist Breakout, das sollte man schon kennen. Was soll man denn da erklären? Das ist als würde man Pong nicht kennen.</p>
 
 			<iframe src="game.html" name="Breakout" width="800" height="850" frameborder="0" scrolling="no">Der Browser unterstützt keine iframes, Spiel konnte nicht geladen werden.</iframe>
 			
@@ -62,7 +64,7 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td>1</td> <td>Testeintrag</td> <td>100</td>
+						<td>1</td> <td>Rene</td> <td>100</td>
 					</tr>
 				</tbody>			
 			</table>		
@@ -86,7 +88,7 @@
 
 	<div class="footer">
 		<div id="copyright">
-			&copy; 2020 WT1-Kurs
+			&copy; 2023 WT1-Kurs
 		</div>
 		
 		<ul id="legal"> 
